updated all files

--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ body {
     font-family: 'Fira Sans', sans-serif;
 }
 
-.jumbotron {
+header {
     background-image: linear-gradient(to right, aliceblue, navy);
-    padding: 10px;
+    padding: 20px;
 }
 
 h1, h3, h4 {
@@ -55,34 +55,8 @@ input {
     width: auto;
 }
 
-li:first-child {
-    height: 100%;
-    font-size: larger;
-    background-color: white;
-    border: solid 1px #cecfd2;
-    border-radius: 6px 6px 0px 0px;
-    padding: 12px 5px 12px 15px;
-    list-style: none;
-}
-
-li {
-    height: 100%;
-    font-size: larger;
-    background-color: white;
-    border: solid 1px #cecfd2;
-    border-radius: 0px 0px 0px 0px;
-    padding: 12px 5px 12px 15px;
-    list-style: none;
-}
-
-li:last-child {
-    height: 100%;
-    font-size: larger;
-    background-color: white;
-    border: solid 1px #cecfd2;
-    border-radius: 0px 0px 6px 6px;
-    padding: 12px 5px 12px 15px;
-    list-style: none;
+.city-name {
+    text-transform: capitalize;
 }
 
 .row {
