--- a/style.css
+++ b/style.css
@@ -1,19 +1,28 @@
 body {
-    font-family: 'Fira Sans', sans-serif;
+    font-family: sans-serif;
 }
 
 header {
     background-image: linear-gradient(to right, aliceblue, navy);
+    text-align: center;
     padding: 20px;
+    color: white;
 }
 
 h1, h3, h4 {
-    font-weight: bold;
+    font-weight: bolder;
 }
 
-.container {
+.search-content {
     display: flex;
-    flex-direction: row;
+}
+
+.content-left {
+    width: 30%;
+}
+
+.content-right {
+    width: 70%;
 }
 
 #clearHistoryBtn {
@@ -21,33 +30,47 @@ h1, h3, h4 {
 }
 
 .five-day-container {
-    display: flex;
-    flex-direction: row;
     padding: 20px;
 }
 
-.card-forecast {
-    margin-left: 58.5px;
-    width: 175px;
-    height: auto;
+.cards-forecast {
+    display: flex;
+    justify-content: space-between;
     border-radius: 5px;
+}
+
+.card {
+    width: 18%;
+    background-color: #193B5C;
     color: white;
-    font-size: larger;
-    background-color: #3498db;
 }
 
-.five-day-container .card-text {
-    margin-bottom: 15px;
-    padding: 10px 30px 5px 10px;
-}
-
-.five-day-card img {
-    margin-left: 10%;
+.btn-custom {
+    width: fit-content;
+    margin-left: 15px;
+    margin-top: 10px;
 }
 
 img {
     width: auto;
     height: auto;
+} 
+
+.severe {
+    padding: 5px;
+    background-color: red;
+    color:white;
+}
+
+.moderate {
+    padding: 5px;
+    background-color: yellow;
+}
+
+.favorable {
+    padding: 5px;
+    background-color: green;
+    color:white;
 }
 
 input {
@@ -59,11 +82,22 @@ input {
     text-transform: capitalize;
 }
 
-.row {
-    display: flex;
-    margin: 5px;
+@media only screen and (max-width: 768px) {
+    .search-content {
+        flex-direction: column;
+    }
+
+    .content-left, .content-right {
+        width: 100%;
+    }
 }
 
-.row * {
-    margin-right: 5px;
+@media only screen and (max-width: 520px) {
+    .cards-forecast {
+        flex-direction: column;
+    }
+
+    .card {
+        width: 100%;
+    }
 }
