--- a/style.css
+++ b/style.css
@@ -51,10 +51,11 @@ h1, h3, h4 {
     margin-top: 10px;
 }
 
-img {
-    width: auto;
-    height: auto;
+.cards-forecast img {
+    width: 50px;
+    height: 50px;
 } 
+
 
 .severe {
     padding: 5px;
